[metadata]
name = fullstory_api
version = 0.1.3
author = Thinh Vu
author_email = mrthinh@live.com
description = Fullstory API Python Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/fullstory_api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7

# [options.packages.find]
# where=fullstory_api
